--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,2 +1,2 @@
-VITE_API_URL=http://localhost:8000/api
-VITE_APP_NAME="Project Manager"
+REACT_APP_API_URL=http://localhost:8000/api
+REACT_APP_APP_NAME="Project Manager"
